grammar.js
        gsql: $ => repeat($._definition),

        _definition: $ => seq(
            choice(
                $.create_query,
                $.interpret_query
            ),
            $.query_body
        ),

        //tested
        create_query: $ => seq(
            caseInsensitive("create"),
            optional(
                seq(caseInsensitive("or"), caseInsensitive("replace"))
            ),
            optional(caseInsensitive("distributed")),
            caseInsensitive("query"),
            field("queryName", $.name),
            $.parameter_list,
            caseInsensitive("for"),
            caseInsensitive("graph"),
            field("graphName", $.name),
            optional(
                seq(caseInsensitive("syntax"), caseInsensitive("v2"))
            ),
        ),


        //tested
        interpret_query: $ => seq(
            caseInsensitive("interpret"),
            caseInsensitive("query"),
            $.parameter_list,
            caseInsensitive("for"),
            caseInsensitive("graph"),
            field("graphName", $.name),
            optional(
                seq(caseInsensitive("syntax"), caseInsensitive("v2"))
            ),
        ),

        //tested
        parameter_list: $ => seq(
            "(",
            repeat($.query_params),
            ")"
        ),

        //tested
        query_params: $ => seq(
            $.query_param,
            optional(
                repeat(seq(",", $.query_param))
            )
        ),

        //tested
        query_param: $ => seq(
            $._type,
            $.name,
            optional(seq("=", $.numeric))
        ),

        //tested
        query_body: $ =>
            seq(
                "{",
                repeat($.typedef),
                // optional($.declaration_except_stmts),
                repeat($.query_body_stmts),
                "}"
            ),

        //tested
        query_body_stmts: $ => seq(
            $.query_body_stmt,
            ';'
        ),

        query_body_stmt: $ => choice(
            $.decl_stmt, // tested
            $.assign_stmt, // tested
            $.v_set_var_decl_stmt, // tested
            $.l_accum_assign_stmt, // tested
            $.g_accum_assign_stmt, // tested
            $.g_accum_accum_stmt, // tested
            $.func_call_stmt, // tested
            $._select_stmt, // tested
            $.query_body_case_stmt, //tested
            $.query_body_if_stmt, //tested
            $.query_body_while_stmt, // tested
            $.query_body_for_each_stmt, //tested
            // caseInsensitive("break"),
            // caseInsensitive("continue"),
            // updateStmt ,
            // insertStmt ,
            // queryBodyDeleteStmt ,
            $.print_stmt, //tested
            // printlnStmt ,
            // logStmt ,
            // returnStmt, 
            // raiseStmt ,
            // tryStmt 
        ),

        //tested
        assign_stmt: $ => choice(
            seq($.name, "=", $.expr),
            seq($.name, ".", $.name, "=", $.expr)
        ),

        //tested
        func_call_stmt: $ => choice(
            seq(
                $.name,
                optional(seq(
                    "<",
                    $._type,
                    repeat(seq(",", $._type)),
                    ">"
                )),
                "(",
                optional($.arg_list),
                ")"
            ),
            seq(
                choice($.name, $.local_accum_name, $.global_accum_name),
                repeat1(seq(".", $.name, "(", optional($.arg_list), ")")
                )
            )
        ),

        _select_stmt: $ => choice(
            $.gsql_select_block,
            // $.sqlSelectBlock 
        ),

        gsql_select_block: $ => seq(
            $.gsql_select_clause,
            $.from_clause,
            // optional($.sample_clause),
            optional($.where_clause), 
            optional($.accum_clause), 
            repeat($.post_accum_clause), 
            // optional($.having_clause),
            // optional($.order_clause),
            optional($.limit_clause),
        ),

        gsql_select_clause: $ => seq(
            $.name,
            "=",
            caseInsensitive("select"),
            field("alias", $.name)
        ),

        from_clause: $ => seq(
            caseInsensitive("from"),
            choice(
                $.step,
                seq($.path_pattern, repeat(seq(",", $.path_pattern))),
                $.step_v2, // this could probably be integrated into path pattern
            )
        ),

        for_each_control: $ => choice(
            seq(
                choice(
                    field("iterationVar", choice($.name, $.local_accum_name, $.global_accum_name)),
                    seq("(", field("keyVar", $.name), repeat1(seq(",", field("valueVar", $.name))), ")")
                ),
                seq(choice(caseInsensitive("in"), ":"), 
                $.set_bag_expr)
            ),
            seq(
                field("iterationVar", choice($.name, $.local_accum_name, $.global_accum_name)),
                caseInsensitive("in"),
                caseInsensitive("range"),
                "[",
                $.expr,
                ",",
                $.expr,
                "]",
                optional(seq(".", caseInsensitive("step"), "(", $.expr, ")")))
        ),

        limit_clause: $ => seq(
            caseInsensitive("limit"),
            choice(
                $.expr,
                seq($.expr, ",", $.expr),
                seq($.expr, caseInsensitive("offset"), $.expr)
            )
        ),

        path_pattern: $ => prec(1, seq(
            $.step_source_set,
            repeat(seq(
                "-",
                "(",
                $.path_edge_pattern,
                optional(seq(":", field("edgeAlias", $.name))),
                ")",
                "-",
                $.step_vertex_set
            ))
        )),

        step_source_set: $ => prec(1, seq(
            field('vertexSetName', $.name),
            optional(seq(":", field("vertexAlias", $.name)))
        )),

        query_body_case_stmt: $ => choice(
            seq(
                caseInsensitive("case"),
                repeat1(seq(caseInsensitive("when"), $.condition, caseInsensitive("then"), $.query_body_stmts)),
                optional(seq(caseInsensitive("else"), $.query_body_stmts)),
                caseInsensitive("end")
            ),
            seq(
                caseInsensitive("case"),
                $.expr,
                repeat1(seq(caseInsensitive("when"), $.constant, caseInsensitive("then"), $.query_body_stmts)),
                optional(seq(caseInsensitive("else"), $.query_body_stmts)),
                caseInsensitive("end")
            ),
        ),

        query_body_for_each_stmt: $ => seq(
            caseInsensitive("foreach"),
            $.for_each_control,
            caseInsensitive("do"),
            $.query_body_stmts,
            caseInsensitive("end")
        ),


        decl_stmt: $ => choice(
            $.base_decl_stmt,
            $.accum_decl_stmt,
            // $.file_decl_stmt
        ),

        //tested
        base_decl_stmt: $ => seq(
            $.base_type,
            $.name,
            optional(seq("=", $.expr)),
            repeat(seq(",", $.name, optional(seq("=", $.expr))))
        ),

        //tested
        accum_decl_stmt: $ => seq(
            $.accum_type,
            choice($.local_accum_name, $.global_accum_name),
            optional(seq("=", $.constant)),
            repeat(
                seq(
                    ",",
                    choice($.local_accum_name, $.global_accum_name),
                    optional(seq("=", $.constant))
                )
            )
        ),

        //tested
        accum_type: $ => choice(
            seq( caseInsensitive("sumAccum"), "<", choice(caseInsensitive("int"), caseInsensitive("float"), caseInsensitive("double"), caseInsensitive("string")), ">"),
            seq(caseInsensitive("maxaccum"), "<", choice(caseInsensitive("int"), caseInsensitive("float"), caseInsensitive("double")), ">"),
            seq(caseInsensitive("minaccum"), "<", choice(caseInsensitive("int"), caseInsensitive("float"), caseInsensitive("double")), ">"),
            caseInsensitive("avgaccum"),
            caseInsensitive("oraccum"),
            caseInsensitive("andaccum"),
            caseInsensitive("bitwiseoraccum"),
            caseInsensitive("bitwiseandaccum"),
            seq(caseInsensitive("listaccum"), "<", choice($._element_type, $.accum_type), ">"),
            // seq(caseInsensitive("listaccum"), "<", choice($.base_type, $.accum_type, $.name), ">"),
            // seq(caseInsensitive("setaccum"), "<", choice($._element_type,$.accum_type), ">"),
            seq(caseInsensitive("setaccum"), "<", $._element_type, ">"),
            seq(caseInsensitive("bagaccum"), "<", $._element_type, ">"),
            seq(caseInsensitive("mapaccum"), "<", $._element_type, ",", choice($.base_type, $.accum_type, $.name), ">"),
            seq(caseInsensitive("heapaccum"), "<", $.name, ">", "(", repeat1($.digit), ",", $.name, choice(caseInsensitive("asc"), caseInsensitive("desc")), repeat(seq(",", $.name, choice(caseInsensitive("asc"), caseInsensitive("desc")))), ")"),
            seq(caseInsensitive("groupbyaccum"), "<", $._element_type, $.name, repeat(seq(",", $._element_type, $.name)), ",", $.accum_type, $.name, repeat(seq(",", $.accum_type, $.name)), ">"),
            seq(caseInsensitive("arrayaccum"), "<", $.name, ">")
        ),

        //tested
        global_accum_name: $ => seq(
            "@@",
            $.name
        ),

        //tested
        local_accum_name: $ => seq(
            "@",
            $.name
        ),

        arg_list: $ => seq(
            $.expr,
            repeat(seq(",", $.expr))
        ),

        expr: $ => prec.left(5, choice(
            $.name,
            $.global_accum_name,
            // seq($.name, ".", $.name),
            // seq($.name, ".", $.local_accum_name),
            $.name_dot,
            seq($.name, ".", $.name, ".", $.name, "(", optional($.arg_list), ")"),
            seq($.name, ".", $.name, "(", optional($.arg_list), ")", optional(seq(".", caseInsensitive("filter"), "(", $.condition, ")"))),
            // seq($.name, optional(seq("<", $._type, repeat(seq(",", $._type)), ">")), "(", optional(seq($.arg_list, ")"))),
            // seq($.name, ".", $.local_accum_name, repeat1(seq(".", $.name, "(", optional($.arg_list), ")")), optional(seq(".", $.name))),
            // seq($.global_accum_name, repeat1(seq(".", $.name, "(", optional($.arg_list), ")")), optional(seq(".", $.name))),
            seq(caseInsensitive("coalesce"), "(", optional($.arg_list), ")"),
            seq($.aggregator, "(", optional(caseInsensitive("distinct")), $.set_bag_expr, ")"),
            seq(caseInsensitive("isempty"), "(", $.set_bag_expr, ")"),
            prec.left(2, seq($.expr, $.math_operator, $.expr)),
            prec.left(1, seq("-", $.expr)),
            seq("(", $.expr, ")"),
            seq("(", $.arg_list, "->", $.arg_list, ")"),
            seq("[", $.arg_list, "]"),
            $.constant,
            $.set_bag_expr,
            $.func_call_stmt // seq($.name, "(", $.arg_list, ")"),
        )),

        condition: $ => prec.left(1, choice(
            $.expr,
            seq($.expr, $.comparison_operator, $.expr),
            seq($.expr, optional(caseInsensitive("not")), caseInsensitive("in"), $.set_bag_expr),
            seq($.expr, caseInsensitive("is"), optional(caseInsensitive("not")), caseInsensitive("null")),
            seq($.expr, caseInsensitive("between"), $.expr, caseInsensitive("and"), $.expr),
            seq("(", $.condition, ")"),
            seq(caseInsensitive("not"), $.condition),
            seq($.condition, choice(caseInsensitive("and"), caseInsensitive("or")), $.condition),
            choice(caseInsensitive("true"), caseInsensitive("false")),
            seq($.expr, optional(caseInsensitive("not")), caseInsensitive("like"), $.expr)
        )),

        set_bag_expr: $ => prec.left(0, choice(
            $.name,
            $.global_accum_name,
            // seq($.name, ".", $.name),
            // seq($.name, ".", $.local_accum_name),
            $.name_dot,
            seq($.name_dot, repeat(seq(".", $.name, "(", optional($.arg_list), ")"))),
            // seq($.name, ".", $.name, "(", optional($.arg_list), ")", optional(seq(".", caseInsensitive("filter"), "(", $.condition, ")"))),
            // seq($.global_accum_name, repeat(seq(".", $.name, "(", optional($.arg_list), ")"))),
            seq($.set_bag_expr, choice(caseInsensitive("union"), caseInsensitive("intersect"), caseInsensitive("minus")), $.set_bag_expr),
            seq("(", $.arg_list, ")"),
            seq("(", $.set_bag_expr, ")")
        )),

        name_dot: $ => prec.left(1, seq(
            $.name,
            ".",
            choice($.name, $.local_accum_name),
            repeat(seq(".", $.name))
        )),

        _type: $ => choice(
            $.base_type
        ),

        _element_type: $ => choice(
            $.base_type,
            $.name
        ),

        base_type: $ => choice(
            caseInsensitive("bool"),
            caseInsensitive("int"),
            caseInsensitive("uint"),
            caseInsensitive("float"),
            caseInsensitive("double"),
            caseInsensitive("string"),
            seq(caseInsensitive("vertex"), optional(seq("<", $.name, ">"))),
            caseInsensitive("edge"),
            caseInsensitive("jsonobject"),
            caseInsensitive("jsonarray"),
            caseInsensitive("datetime")
        ),

        name: $ => /[\p{L}_$][\p{L}\p{Nd}_$]*/, // thanks, java --> https://github.com/tree-sitter/tree-sitter-java/blob/master/grammar.js#:~:text=%5B%5Cp%7BL%7D_%24%5D%5B%5Cp%7BL%7D%5Cp%7BNd%7D_%24%5D*
        // name: $ => { // thanks, js --> https://github.com/tree-sitter/tree-sitter-javascript/blob/master/grammar.js
        // 	const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/
        // 	const alphanumeric = /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/
        // 	return token(seq(alpha, repeat(alphanumeric)))
        // },

        constant: $ => choice(
            $.numeric,
            $.string_literal,
            caseInsensitive("true"),
            caseInsensitive("false"),
            caseInsensitive("gsql_uint_max"),
            caseInsensitive("gsql_int_max"),
            caseInsensitive("gsql_uint_min"),
        ),

        numeric: $ => choice(
            $.integer,
            $.real
        ),

        integer: $ => seq(
            optional('-'),
            $.digit
        ),

        real: $ => choice(
            seq(optional("-"), seq(".", repeat1($.digit))),
            seq(optional("-"), $.digit, seq(".", $.digit)),
        ),

        digit: $ => /\d+/,

        string_literal: $ => choice(
            seq(
                '"',
                repeat(/[^"&]/),
                '"'
            ), seq(
                '\'',
                repeat(/[^'&]/),
                '\''
            )
        ),
        math_operator: $ => choice(
            "*",
            "/",
            "%",
            "+",
            "-",
            "<<",
            ">>",
            "&",
            " | "
        ),

        line_comment: $ => token(seq(
            '//', /.*/
        )),

        block_comment: $ => token(seq(
            '/*',
            /[^*]*\*+([^/*][^*]*\*+)*/,
            '/'
        )),
    },
});

function caseInsensitive(keyword) {
    return new RegExp(
        keyword
            .split("")
            .map((letter) => `[${letter}${letter.toUpperCase()}]`)
            .join("")
    );
}
