test/corpus/assign_stms.txt
===
Query Body Assign (incl name and constant Exprs)
===

CREATE QUERY myQuery() FOR GRAPH MyGraph {
    x = 0;
    x.i = 1;
    x = a;
    x = "String literal";
    x = TRUE;
    x = FALSE;
    x = TO_DATETIME("1900-01-01");
    x = @@name;
    x = name.@name.name();
    x = name.name.name;
}

---

(gsql 
    (create_query 
        queryName: (name) 
        (parameter_list)
        graphName: (name) 
        (query_body 
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) 
                        (expr (constant (numeric (integer (digit)))))))) 
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) (name) 
                        (expr (constant (numeric (integer (digit)))))))) 
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) 
                        (expr (name))))) 
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) 
                        (expr (constant (string_literal)))))) 
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name)
                        (expr (constant)))))
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) 
                        (expr (constant))))) 
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) 
                        (expr (func_call_stmt (name) (arg_list (expr (constant (string_literal)))))))))
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) (expr (global_accum_name (name)))))) 
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) 
                        (expr (set_bag_expr (name_dot (name) (local_accum_name (name))) (name))))))
            (query_body_stmts 
                (query_body_stmt 
                    (assign_stmt 
                        (name) 
                        (expr (name_dot (name) (name) (name))))))
        )
    )
)
