test/corpus/limit.txt
===
Limit
===
CREATE QUERY myQuery() FOR GRAPH MyGraph {
    V = SELECT s FROM S:s LIMIT 10000 OFFSET x * 10;
}
---

(gsql 
  (create_query 
    (name) 
    (parameter_list) 
    (name) 
    (query_body 
      (query_body_stmts 
        (query_body_stmt 
          (gsql_select_block 
            (gsql_select_clause 
              (name) 
              (name)) 
            (from_clause 
              (path_pattern 
                (step_source_set 
                  (name) 
                  (name)))) 
            (limit_clause 
              (expr 
                (constant 
                  (numeric 
                    (integer 
                      (digit) 
                      (digit) 
                      (digit) 
                      (digit) 
                      (digit))))) 
              (expr 
                (expr 
                  (name)) 
                (math_operator) 
                (expr 
                  (constant 
                    (numeric 
                      (integer 
                        (digit) 
                        (digit)))))))))))))
