test/corpus/qb_case.txt
===
Query Body Case
===
CREATE QUERY myQuery() FOR GRAPH MyGraph {
    CASE
        WHEN X then
            V = SELECT s FROM S:s;
        ELSE
            elseFunc();
        END;

}
---

(gsql 
  (create_query 
    (name) 
    (parameter_list) 
    (name) 
    (query_body 
      (query_body_stmts 
        (query_body_stmt 
          (query_body_case_stmt 
            (condition 
              (expr 
                (name))) 
            (query_body_stmts 
              (query_body_stmt 
                (gsql_select_block 
                  (gsql_select_clause 
                    (name) 
                    (name)) 
                  (from_clause 
                    (path_pattern 
                      (step_source_set 
                        (name) 
                        (name))))))) 
            (query_body_stmts 
              (query_body_stmt 
                (func_call_stmt 
                  (name))))))))))
