test/corpus/qb_foreach.txt
===
Query Body ForEach
===
CREATE QUERY myQuery() FOR GRAPH MyGraph {
    FOREACH (k, v) in glbList DO
        V = SELECT s FROM S:s;
    end;
}
---

(gsql
(create_query 
  (name) 
  (parameter_list) 
  (name) 
  (query_body 
    (query_body_stmts 
      (query_body_stmt 
        (query_body_for_each_stmt 
          (for_each_control 
            (name) 
            (name) 
            (set_bag_expr 
              (name))) 
          (query_body_stmts 
            (query_body_stmt 
              (gsql_select_block 
                (gsql_select_clause 
                  (name) 
                  (name)) 
                (from_clause 
                  (path_pattern 
                    (step_source_set 
                      (name) 
                      (name)))))))))))))
